Update docs to reflect latest changes.

--- a/model/componentstateeventargs.html
+++ b/model/componentstateeventargs.html
@@ -2,21 +2,10 @@
 
 <html>
 <head>
-	<title>IComponent.cs</title>
+	<title>ComponentStateEventArgs.cs</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<link href="../nocco.css" rel="stylesheet" media="all" type="text/css" />
 	<script src="../prettify.js" type="text/javascript"></script>
-	<script type="text/javascript">
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-28613716-1']);
-	  _gaq.push(['_trackPageview']);
-
-	  (function() {
-	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-	</script>
 </head>
 <body onload="prettyPrint()">
 	<div id="container">
@@ -25,50 +14,53 @@
 				Jump To &hellip;
 				<div id="jump_wrapper">
 					<div id="jump_page">
-							<a class="source" href="../index.html">
-								ComponentKit
+							<a class="source" href="../componentkit.html">
+								ComponentKit.cs
 							</a>
-							<a class="source" href="../componentkit/componentsynceventargs.html">
-								ComponentKit\ComponentSyncEventArgs.cs
+							<a class="source" href="../componentsynceventargs.html">
+								ComponentSyncEventArgs.cs
 							</a>
-							<a class="source" href="../componentkit/entityeventargs.html">
-								ComponentKit\EntityEventArgs.cs
+							<a class="source" href="../entityeventargs.html">
+								EntityEventArgs.cs
 							</a>
-							<a class="source" href="../componentkit/icomponent.html">
-								ComponentKit\IComponent.cs
+							<a class="source" href="../icomponent.html">
+								IComponent.cs
 							</a>
-							<a class="source" href="../componentkit/ientityrecord.html">
-								ComponentKit\IEntityRecord.cs
+							<a class="source" href="../ientityrecord.html">
+								IEntityRecord.cs
 							</a>
-							<a class="source" href="../componentkit/ientityrecordcollection.html">
-								ComponentKit\IEntityRecordCollection.cs
+							<a class="source" href="../ientityrecordcollection.html">
+								IEntityRecordCollection.cs
 							</a>
-							<a class="source" href="../componentkit/isynchronizable.html">
-								ComponentKit\ISynchronizable.cs
+							<a class="source" href="../isynchronizable.html">
+								ISynchronizable.cs
 							</a>
-							<a class="source" href="../componentkit/isyncstate.html">
-								ComponentKit\ISyncState.cs
+							<a class="source" href="../isyncstate.html">
+								ISyncState.cs
 							</a>
-							<a class="source" href="../componentkit/model/componentstateeventargs.html">
-								ComponentKit\Model\ComponentStateEventArgs.cs
+							<a class="source" href="../model/component.html">
+								Model\Component.cs
 							</a>
-							<a class="source" href="../componentkit/model/dependencycomponent.html">
-								ComponentKit\Model\DependencyComponent.cs
+							<a class="source" href="../model/componentstateeventargs.html">
+								Model\ComponentStateEventArgs.cs
 							</a>
-							<a class="source" href="../componentkit/model/entity.html">
-								ComponentKit\Model\Entity.cs
+							<a class="source" href="../model/dependencycomponent.html">
+								Model\DependencyComponent.cs
 							</a>
-							<a class="source" href="../componentkit/model/entityrecord.html">
-								ComponentKit\Model\EntityRecord.cs
+							<a class="source" href="../model/entity.html">
+								Model\Entity.cs
 							</a>
-							<a class="source" href="../componentkit/model/entityrecordstore.html">
-								ComponentKit\Model\EntityRecordStore.cs
+							<a class="source" href="../model/entityrecord.html">
+								Model\EntityRecord.cs
 							</a>
-							<a class="source" href="../componentkit/model/entityregistry.html">
-								ComponentKit\Model\EntityRegistry.cs
+							<a class="source" href="../model/entityrecordstore.html">
+								Model\EntityRecordStore.cs
 							</a>
-							<a class="source" href="../componentkit/model/requirecomponentattribute.html">
-								ComponentKit\Model\RequireComponentAttribute.cs
+							<a class="source" href="../model/entityregistry.html">
+								Model\EntityRegistry.cs
+							</a>
+							<a class="source" href="../model/requirecomponentattribute.html">
+								Model\RequireComponentAttribute.cs
 							</a>
 					</div>
 				</div>
@@ -77,7 +69,7 @@
 			<thead>
 				<tr>
 					<th class="docs">
-						<h1>IComponent.cs</h1>
+						<h1>ComponentStateEventArgs.cs</h1>
 					</th>
 					<th class="code"></th>
 				</tr>
@@ -120,7 +112,7 @@
 						<td class="code">
 							<pre><code class='prettyprint'>using System;
 
-namespace ComponentKit {
+namespace ComponentKit.Model {
 </code></pre>
 						</td>
 					</tr>
@@ -129,11 +121,23 @@ namespace ComponentKit {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_4">&#182;</a>
 							</div>
-							<p>Defines a component of an entity.</p>
+							<p>Provides the entities involved in a change of state for a component.</p>
+
+<blockquote>
+  <p>For example, when components are <strong>added</strong> or <strong>removed</strong> these <code>EventArgs</code> will be provided. </p>
+</blockquote>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>    public interface IComponent : ISynchronizable {
+							<pre><code class='prettyprint'>    public class ComponentStateEventArgs : EntityEventArgs {
+        public ComponentStateEventArgs(IEntityRecord entity)
+            : base(entity) { }
+
+        public ComponentStateEventArgs(IEntityRecord entity, IEntityRecord previousEntity)
+            : base(entity) {
+            PreviousRecord = previousEntity;
+        }
+
 </code></pre>
 						</td>
 					</tr>
@@ -142,11 +146,15 @@ namespace ComponentKit {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_5">&#182;</a>
 							</div>
-							<p>Gets or sets the entity that this component is attached to.</p>
+							<p>Gets the entity that the component was previously attached to, or <code>null</code> if none.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        IEntityRecord Record { get; set; }
+							<pre><code class='prettyprint'>        public IEntityRecord PreviousRecord {
+            get;
+            private set;
+        }
+
 </code></pre>
 						</td>
 					</tr>
@@ -155,13 +163,18 @@ namespace ComponentKit {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_6">&#182;</a>
 							</div>
-							<p>Receives a message containing arbitrary data.</p>
+							<p>Gets the entity that the component is currently attached to, or <code>null</code> if it was just dettached.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        void Receive&lt;T&gt;(string message, T data);
+							<pre><code class='prettyprint'>        public override IEntityRecord Record {
+            get {
+                return base.Record;
+            }
+        }
     }
 }
+
 </code></pre>
 						</td>
 					</tr>
