--- a/model/entityrecord.html
+++ b/model/entityrecord.html
@@ -4,19 +4,8 @@
 <head>
 	<title>EntityRecord.cs</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<link href="../../nocco.css" rel="stylesheet" media="all" type="text/css" />
-	<script src="../../prettify.js" type="text/javascript"></script>
-	<script type="text/javascript">
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-28613716-1']);
-	  _gaq.push(['_trackPageview']);
-
-	  (function() {
-	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-	</script>
+	<link href="../nocco.css" rel="stylesheet" media="all" type="text/css" />
+	<script src="../prettify.js" type="text/javascript"></script>
 </head>
 <body onload="prettyPrint()">
 	<div id="container">
@@ -25,50 +14,53 @@
 				Jump To &hellip;
 				<div id="jump_wrapper">
 					<div id="jump_page">
-							<a class="source" href="../../index.html">
-								ComponentKit
+							<a class="source" href="../componentkit.html">
+								ComponentKit.cs
 							</a>
 							<a class="source" href="../componentsynceventargs.html">
-								ComponentKit\ComponentSyncEventArgs.cs
+								ComponentSyncEventArgs.cs
 							</a>
 							<a class="source" href="../entityeventargs.html">
-								ComponentKit\EntityEventArgs.cs
+								EntityEventArgs.cs
 							</a>
 							<a class="source" href="../icomponent.html">
-								ComponentKit\IComponent.cs
+								IComponent.cs
 							</a>
 							<a class="source" href="../ientityrecord.html">
-								ComponentKit\IEntityRecord.cs
+								IEntityRecord.cs
 							</a>
 							<a class="source" href="../ientityrecordcollection.html">
-								ComponentKit\IEntityRecordCollection.cs
+								IEntityRecordCollection.cs
 							</a>
 							<a class="source" href="../isynchronizable.html">
-								ComponentKit\ISynchronizable.cs
+								ISynchronizable.cs
 							</a>
 							<a class="source" href="../isyncstate.html">
-								ComponentKit\ISyncState.cs
+								ISyncState.cs
 							</a>
-							<a class="source" href="componentstateeventargs.html">
-								ComponentKit\Model\ComponentStateEventArgs.cs
+							<a class="source" href="../model/component.html">
+								Model\Component.cs
 							</a>
-							<a class="source" href="dependencycomponent.html">
-								ComponentKit\Model\DependencyComponent.cs
+							<a class="source" href="../model/componentstateeventargs.html">
+								Model\ComponentStateEventArgs.cs
 							</a>
-							<a class="source" href="entity.html">
-								ComponentKit\Model\Entity.cs
+							<a class="source" href="../model/dependencycomponent.html">
+								Model\DependencyComponent.cs
 							</a>
-							<a class="source" href="entityrecord.html">
-								ComponentKit\Model\EntityRecord.cs
+							<a class="source" href="../model/entity.html">
+								Model\Entity.cs
 							</a>
-							<a class="source" href="entityrecordstore.html">
-								ComponentKit\Model\EntityRecordStore.cs
+							<a class="source" href="../model/entityrecord.html">
+								Model\EntityRecord.cs
 							</a>
-							<a class="source" href="entityregistry.html">
-								ComponentKit\Model\EntityRegistry.cs
+							<a class="source" href="../model/entityrecordstore.html">
+								Model\EntityRecordStore.cs
 							</a>
-							<a class="source" href="requirecomponentattribute.html">
-								ComponentKit\Model\RequireComponentAttribute.cs
+							<a class="source" href="../model/entityregistry.html">
+								Model\EntityRegistry.cs
+							</a>
+							<a class="source" href="../model/requirecomponentattribute.html">
+								Model\RequireComponentAttribute.cs
 							</a>
 					</div>
 				</div>
