--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <html>
 <head>
 	<title>ComponentKit</title>
+	<meta HTTP-EQUIV="REFRESH" content="0; url=componentkit.html">
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<link href="nocco.css" rel="stylesheet" media="all" type="text/css" />
-	<script src="prettify.js" type="text/javascript"></script>
 	<script type="text/javascript">
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-28613716-1']);
@@ -18,113 +17,5 @@
 	  })();
 	</script>
 </head>
-<body onload="prettyPrint()">
-	<div id="container">
-		<div id="background"></div>
-			<div id="jump_to">
-				Jump To &hellip;
-				<div id="jump_wrapper">
-					<div id="jump_page">
-							<a class="source" href="componentkit/componentsynceventargs.html">
-								ComponentKit\ComponentSyncEventArgs.cs
-							</a>
-							<a class="source" href="componentkit/entityeventargs.html">
-								ComponentKit\EntityEventArgs.cs
-							</a>
-							<a class="source" href="componentkit/icomponent.html">
-								ComponentKit\IComponent.cs
-							</a>
-							<a class="source" href="componentkit/ientityrecord.html">
-								ComponentKit\IEntityRecord.cs
-							</a>
-							<a class="source" href="componentkit/ientityrecordcollection.html">
-								ComponentKit\IEntityRecordCollection.cs
-							</a>
-							<a class="source" href="componentkit/isynchronizable.html">
-								ComponentKit\ISynchronizable.cs
-							</a>
-							<a class="source" href="componentkit/isyncstate.html">
-								ComponentKit\ISyncState.cs
-							</a>
-							<a class="source" href="componentkit/model/componentstateeventargs.html">
-								ComponentKit\Model\ComponentStateEventArgs.cs
-							</a>
-							<a class="source" href="componentkit/model/dependencycomponent.html">
-								ComponentKit\Model\DependencyComponent.cs
-							</a>
-							<a class="source" href="componentkit/model/entity.html">
-								ComponentKit\Model\Entity.cs
-							</a>
-							<a class="source" href="componentkit/model/entityrecord.html">
-								ComponentKit\Model\EntityRecord.cs
-							</a>
-							<a class="source" href="componentkit/model/entityrecordstore.html">
-								ComponentKit\Model\EntityRecordStore.cs
-							</a>
-							<a class="source" href="componentkit/model/entityregistry.html">
-								ComponentKit\Model\EntityRegistry.cs
-							</a>
-							<a class="source" href="componentkit/model/requirecomponentattribute.html">
-								ComponentKit\Model\RequireComponentAttribute.cs
-							</a>
-					</div>
-				</div>
-			</div>
-		<table cellpadding="0" cellspacing="0">
-			<thead>
-				<tr>
-					<th class="docs">
-						<h1>ComponentKit</h1>
-					</th>
-					<th class="code"></th>
-				</tr>
-			</thead>
-			<tbody>
-					<tr id="section_1">
-						<td class="docs">
-							<div class="pilwrap">
-								<a class="pilcrow" href="#section_1">&#182;</a>
-							</div>
-							<p>Copyright 2012 Jacob H. Hansen.<br />
-<em>This project and all source code is subject to the terms and conditions defined in the <a href="https://github.com/shrt/ComponentKit/blob/master/LICENSE">'License'</a>.</em></p>
 
-						</td>
-						<td class="code">
-							<pre><code class='prettyprint'>
-</code></pre>
-						</td>
-					</tr>
-					<tr id="section_2">
-						<td class="docs">
-							<div class="pilwrap">
-								<a class="pilcrow" href="#section_2">&#182;</a>
-							</div>
-							<h3>What it is</h3>
-
-<p><strong>ComponentKit</strong> provides a set of <strong>C#</strong> interfaces and classes that are useful when you need to maintain an <strong>in-memory database</strong> of <strong>entity</strong> composites.</p>
-
-<p>Features include: <strong>triggers</strong>, for handling the processing of components, <strong>dependency injection</strong>, and some very basic <strong>inter-component messaging</strong>.</p>
-
-<p>The programming model is similar to that found in these cool things:</p>
-
-<ul>
-<li>The scripting in <a href="http://www.unity3d.com">Unity3D</a></li>
-<li><a href="http://pushbuttonengine.com">PushButton Engine V2</a></li>
-</ul>
-
-<p>Though originally intended as an educational reference/example on how to implement <em>yet another entity system</em>, it should be perfectly fine for use in real productions too.</p>
-
-<p>Further <strong>documentation</strong> can be found through the button at the upper-right corner of this page. All documentation has been generated straight from the source, using <a href="http://dontangg.github.com/nocco/">Nocco</a>.</p>
-
-<p>The complete <a href="http://github.com/shrt/ComponentKit">source for ComponentKit</a> can be found at github. Do with it what you want!</p>
-
-						</td>
-						<td class="code">
-							<pre><code class='prettyprint'></code></pre>
-						</td>
-					</tr>
-			</tbody>
-		</table>
-	</div>
-</body>
 </html>
