--- a/model/requirecomponentattribute.html
+++ b/model/requirecomponentattribute.html
@@ -2,21 +2,10 @@
 
 <html>
 <head>
-	<title>ComponentStateEventArgs.cs</title>
+	<title>RequireComponentAttribute.cs</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<link href="../../nocco.css" rel="stylesheet" media="all" type="text/css" />
-	<script src="../../prettify.js" type="text/javascript"></script>
-	<script type="text/javascript">
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-28613716-1']);
-	  _gaq.push(['_trackPageview']);
-
-	  (function() {
-	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-	</script>
+	<link href="../nocco.css" rel="stylesheet" media="all" type="text/css" />
+	<script src="../prettify.js" type="text/javascript"></script>
 </head>
 <body onload="prettyPrint()">
 	<div id="container">
@@ -25,50 +14,53 @@
 				Jump To &hellip;
 				<div id="jump_wrapper">
 					<div id="jump_page">
-							<a class="source" href="../../index.html">
-								ComponentKit
+							<a class="source" href="../componentkit.html">
+								ComponentKit.cs
 							</a>
 							<a class="source" href="../componentsynceventargs.html">
-								ComponentKit\ComponentSyncEventArgs.cs
+								ComponentSyncEventArgs.cs
 							</a>
 							<a class="source" href="../entityeventargs.html">
-								ComponentKit\EntityEventArgs.cs
+								EntityEventArgs.cs
 							</a>
 							<a class="source" href="../icomponent.html">
-								ComponentKit\IComponent.cs
+								IComponent.cs
 							</a>
 							<a class="source" href="../ientityrecord.html">
-								ComponentKit\IEntityRecord.cs
+								IEntityRecord.cs
 							</a>
 							<a class="source" href="../ientityrecordcollection.html">
-								ComponentKit\IEntityRecordCollection.cs
+								IEntityRecordCollection.cs
 							</a>
 							<a class="source" href="../isynchronizable.html">
-								ComponentKit\ISynchronizable.cs
+								ISynchronizable.cs
 							</a>
 							<a class="source" href="../isyncstate.html">
-								ComponentKit\ISyncState.cs
+								ISyncState.cs
 							</a>
-							<a class="source" href="componentstateeventargs.html">
-								ComponentKit\Model\ComponentStateEventArgs.cs
+							<a class="source" href="../model/component.html">
+								Model\Component.cs
 							</a>
-							<a class="source" href="dependencycomponent.html">
-								ComponentKit\Model\DependencyComponent.cs
+							<a class="source" href="../model/componentstateeventargs.html">
+								Model\ComponentStateEventArgs.cs
 							</a>
-							<a class="source" href="entity.html">
-								ComponentKit\Model\Entity.cs
+							<a class="source" href="../model/dependencycomponent.html">
+								Model\DependencyComponent.cs
 							</a>
-							<a class="source" href="entityrecord.html">
-								ComponentKit\Model\EntityRecord.cs
+							<a class="source" href="../model/entity.html">
+								Model\Entity.cs
 							</a>
-							<a class="source" href="entityrecordstore.html">
-								ComponentKit\Model\EntityRecordStore.cs
+							<a class="source" href="../model/entityrecord.html">
+								Model\EntityRecord.cs
 							</a>
-							<a class="source" href="entityregistry.html">
-								ComponentKit\Model\EntityRegistry.cs
+							<a class="source" href="../model/entityrecordstore.html">
+								Model\EntityRecordStore.cs
 							</a>
-							<a class="source" href="requirecomponentattribute.html">
-								ComponentKit\Model\RequireComponentAttribute.cs
+							<a class="source" href="../model/entityregistry.html">
+								Model\EntityRegistry.cs
+							</a>
+							<a class="source" href="../model/requirecomponentattribute.html">
+								Model\RequireComponentAttribute.cs
 							</a>
 					</div>
 				</div>
@@ -77,7 +69,7 @@
 			<thead>
 				<tr>
 					<th class="docs">
-						<h1>ComponentStateEventArgs.cs</h1>
+						<h1>RequireComponentAttribute.cs</h1>
 					</th>
 					<th class="code"></th>
 				</tr>
@@ -129,23 +121,12 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_4">&#182;</a>
 							</div>
-							<p>Provides the entities involved in a change of state for a component.</p>
-
-<blockquote>
-  <p>For example, when components are <strong>added</strong> or <strong>removed</strong> these <code>EventArgs</code> will be provided. </p>
-</blockquote>
+							<p>Indicates that an <code>IComponent</code> field should be treated as a dependency.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>    public class ComponentStateEventArgs : EntityEventArgs {
-        public ComponentStateEventArgs(IEntityRecord entity)
-            : base(entity) { }
-
-        public ComponentStateEventArgs(IEntityRecord entity, IEntityRecord previousEntity)
-            : base(entity) {
-            PreviousRecord = previousEntity;
-        }
-
+							<pre><code class='prettyprint'>    [AttributeUsage(AttributeTargets.Field, AllowMultiple = false)]
+    public sealed class RequireComponentAttribute : Attribute {
 </code></pre>
 						</td>
 					</tr>
@@ -154,13 +135,17 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_5">&#182;</a>
 							</div>
-							<p>Gets the entity that the component was previously attached to, or <code>null</code> if none.</p>
+							<p>Gets or sets the entity that the dependency should be retrieved from.</p>
+
+<blockquote>
+  <p>If this is not specified, it defaults to the entity that the component is currently attached to.</p>
+</blockquote>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        public IEntityRecord PreviousRecord {
+							<pre><code class='prettyprint'>        public string FromRecordNamed {
             get;
-            private set;
+            set;
         }
 
 </code></pre>
@@ -171,14 +156,13 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_6">&#182;</a>
 							</div>
-							<p>Gets the entity that the component is currently attached to, or <code>null</code> if it was just dettached.</p>
+							<p>Gets or sets whether the dependency can be a subclass of the specified component type.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        public override IEntityRecord Record {
-            get {
-                return base.Record;
-            }
+							<pre><code class='prettyprint'>        public bool AllowDerivedTypes {
+            get;
+            set;
         }
     }
 }
